--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: APOTOXIN4869
  * @Email: NOIR.APTX4869@gmail.com
  * @Date: 2019-06-28 13:27:11
- * @LastEditTime: 2019-06-28 18:48:14
+ * @LastEditTime: 2019-06-28 19:35:44
  * @description: 说明
  -->
 <!DOCTYPE html>
@@ -154,7 +154,7 @@
 		
 	</div>
 </div>
-<script type="text/javascript">
+<!-- <script type="text/javascript">
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
 document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
 </script>
@@ -162,6 +162,6 @@ document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.
 var pageTracker = _gat._getTracker("UA-3753241-1");
 pageTracker._initData();
 pageTracker._trackPageview();
-</script>
+</script> -->
 </body>
 </html>
