--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: APOTOXIN4869
  * @Email: NOIR.APTX4869@gmail.com
  * @Date: 2019-06-28 13:27:11
- * @LastEditTime: 2019-06-28 19:35:44
+ * @LastEditTime: 2019-06-28 19:54:56
  * @description: 说明
  -->
 <!DOCTYPE html>
@@ -45,21 +45,7 @@
 		<div class="clear"></div>
 	</div>
 	
-	<div id="mainArea" class="quickFade delayFive">
-		<!-- <section>
-			<article>
-				<div class="sectionTitle">
-					<h1>Personal Profile</h1>
-				</div>
-				
-				<div class="sectionContent">
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer dolor metus, interdum at scelerisque in, porta at lacus. Maecenas dapibus luctus cursus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ultricies massa et erat luctus hendrerit. Curabitur non consequat enim. Vestibulum bibendum mattis dignissim. Proin id sapien quis libero interdum porttitor.</p>
-				</div>
-			</article>
-			<div class="clear"></div>
-		</section> -->
-		
-		
+	<div id="mainArea" class="quickFade delayFive">		
 		<section>
 			<div class="sectionTitle">
 				<h1>工作经历</h1>
@@ -101,8 +87,7 @@
 				<article>
 					<h2>周报脚本统计</h2>
 					<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-						原服务台报告需要从vrops平台手工导出文档再整理,现通过python对vrops的api接口进行操作,
-						将各个平台的数据以json的方式post到接口来生成报告并下载,获取到所有的报告后使用pandas库对数据清洗,输出需要内容,提升了服务台的效率<br>
+						通过python对vrops的api接口进行操作,将各个平台的数据以json的方式post到接口来生成报告并下载,获取到所有的报告后使用pandas库对数据清洗,输出需要内容,提升了服务台的效率<br>
 						该脚本后续还用于vdc中毒挖矿事件(更改json的模版定义,导出疑似中毒用户)
 						</p>
 				</article>
@@ -122,7 +107,6 @@
 					<li>熟悉Docker,K8S,Ansible</li>
 					<li>熟悉前端语言HTML5,CSS3,JavaScript</li>
 					<li>了解MySQL, SQL Server等数据库及其基本操作</li>
-					<li>了解nginx,redis等应用, 能够快速实施部署、配置</li>
 					<li>了解git使用流程</li>
 					<li>&nbsp;</li>
 				</ul>
