--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: APOTOXIN4869
  * @Email: NOIR.APTX4869@gmail.com
  * @Date: 2019-06-28 13:27:11
- * @LastEditTime: 2019-06-28 19:54:56
+ * @LastEditTime: 2019-07-05 22:05:06
  * @description: 说明
  -->
 <!DOCTYPE html>
@@ -58,9 +58,9 @@
 					<p>内容</p>
 				</article> -->
 				<article>
-					<h2>卓望数码 服务业务部 技术支持</h2>
-					<p class="subDetails">2018.12 - 今</p>
-					<p>对移动南方多地的vdc机房主机进行远程管理,具体如设备巡检,基线扫描,ipnet接入等等</p>
+					<h2><a href="http://www.aspire-info.com/#page1">卓望数码</a> 服务业务部 技术支持</h2>
+					<p class="subDetails">2018.12 - 今 (实习+正式)</p>
+					<p>负责移动融合云(vSphere)相关服务产品的落地执行以及移动南方各地区服务设施的日常维护</p>
 				</article>
 				
 				<article>
@@ -87,7 +87,7 @@
 				<article>
 					<h2>周报脚本统计</h2>
 					<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-						通过python对vrops的api接口进行操作,将各个平台的数据以json的方式post到接口来生成报告并下载,获取到所有的报告后使用pandas库对数据清洗,输出需要内容,提升了服务台的效率<br>
+						原服务台通过手工下载再统计得出报告数据;现通过python对vrops平台的api接口进行操作,将数据模板以json的方式post到接口来生成报告并下载,获取到所有的报告后使用pandas库对数据清洗,输出需要内容,极大提升了服务台的工作效率<br>
 						该脚本后续还用于vdc中毒挖矿事件(更改json的模版定义,导出疑似中毒用户)
 						</p>
 				</article>
