--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: APOTOXIN4869
  * @Email: NOIR.APTX4869@gmail.com
  * @Date: 2019-06-28 13:27:11
- * @LastEditTime: 2019-07-05 22:05:06
+ * @LastEditTime: 2019-07-28 14:28:34
  * @description: 说明
  -->
 <!DOCTYPE html>
@@ -48,7 +48,7 @@
 	<div id="mainArea" class="quickFade delayFive">		
 		<section>
 			<div class="sectionTitle">
-				<h1>工作经历</h1>
+				<h1>工作经历~</h1>
 			</div>
 			
 			<div class="sectionContent">
