--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: APOTOXIN4869
  * @Email: NOIR.APTX4869@gmail.com
  * @Date: 2019-06-28 13:27:11
- * @LastEditTime: 2019-07-28 14:28:34
+ * @LastEditTime: 2019-10-15 17:43:59
  * @description: 说明
  -->
 <!DOCTYPE html>
@@ -29,8 +29,8 @@
 		</div>
 		
 		<div id="name">
-			<h1 class="quickFade delayTwo">郑卓文 23</h1>
-			<h4 class="quickFade delayThree">求职意向:自动化运维 运维开发</h2>
+			<h1 class="quickFade delayTwo">郑卓文 24</h1>
+			<h4 class="quickFade delayThree">求职意向:容器, 自动化运维</h2>
 		</div>
 		
 		<div id="contactDetails" class="quickFade delayFour">
@@ -38,7 +38,7 @@
 				<li>学校: 广州大学华软软件学院</li>
 				<li>学历: 本科 (2015-2019)</li>
 				<li>专业: 网络工程系</li>
-				<li>邮箱: noir.aptx4869@gmail.com</li>
+				<li>邮箱: daptx4869@foxmail.com</li>
 				<li>手机: 13124960367</li>
 			</ul>
 		</div>
@@ -48,23 +48,36 @@
 	<div id="mainArea" class="quickFade delayFive">		
 		<section>
 			<div class="sectionTitle">
-				<h1>工作经历~</h1>
+				<h1>技能</h1>
+			</div>
+			
+			<div id="skill" class="sectionContent">
+				<ul style="list-style: none">
+					<li>了解shell编程, 熟悉CentOS,Ubuntu操作系统</li>
+					<li>熟练Python, 了解Java, HTML,Powershell</li>
+					<li>熟悉Docker容器以及K8S容器编排</li>
+					<li>熟悉Nginx, HAproxy,KeepAlived, ansible等应用的部署以及使用  </li>
+					<li>了解MySQL数据库的维护以及基本操作</li>
+					<li>了解git, jenkins CI/CD工具的使用</li>
+					<li>&nbsp;</li>
+				</ul>
+			</div>
+			<div class="clear"></div>
+		</section>
+		<section>
+			<div class="sectionTitle">
+				<h1>经历</h1>
 			</div>
 			
 			<div class="sectionContent">
-				<!-- <article>
-					<h2>公司名字</h2>
-					<p class="subDetails">时间</p>
-					<p>内容</p>
-				</article> -->
 				<article>
-					<h2><a href="http://www.aspire-info.com/#page1">卓望数码</a> 服务业务部 技术支持</h2>
-					<p class="subDetails">2018.12 - 今 (实习+正式)</p>
-					<p>负责移动融合云(vSphere)相关服务产品的落地执行以及移动南方各地区服务设施的日常维护</p>
+					<h2><a href="http://www.aspire-info.com/#page1">卓望数码</a>; 云支撑部系统工程师</h2>
+					<p class="subDetails">2018.12 - ? </p>
+					<p>负责移动高级云相关服务产品的落地执行以及移动南方各地区服务设施的日常维护</p>
 				</article>
 				
 				<article>
-					<h2>广州银行信用卡中心 系统部信息安全实习生</h2>
+					<h2>广州银行信用卡中心; 系统部信息安全实习生</h2>
 					<p class="subDetails">2018.09 - 2018.12</p>
 					<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 						协助信息安全专员对内部web系统进行渗透测试,对系统的上线,迭代进行审核;
@@ -75,77 +88,61 @@
 		</section>
 		<section>
 			<div class="sectionTitle">
-				<h1>工作内容</h1>
+				<h1>项目</h1>
 			</div>
 		
-			<div class="sectionContent">
-				<!-- <article>
-							<h2>内容标题</h2>
-							<p>工作内容</p>
-						</article> -->
-		
+			<div class="sectionContent">		
 				<article>
-					<h2>周报脚本统计</h2>
-					<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-						原服务台通过手工下载再统计得出报告数据;现通过python对vrops平台的api接口进行操作,将数据模板以json的方式post到接口来生成报告并下载,获取到所有的报告后使用pandas库对数据清洗,输出需要内容,极大提升了服务台的工作效率<br>
-						该脚本后续还用于vdc中毒挖矿事件(更改json的模版定义,导出疑似中毒用户)
-						</p>
-				</article>
-			</div>
-			<div class="clear"></div>
-		</section>
-		
-		<section>
-			<div class="sectionTitle">
-				<h1>专业技能</h1>
-			</div>
-			
-			<div id="skill" class="sectionContent">
-				<ul style="list-style: none">
-					<li>了解shell编程,熟悉CentOS,Ubuntu系统</li>
-					<li>熟练Python语言,熟悉django,flask等框架</li>
-					<li>熟悉Docker,K8S,Ansible</li>
-					<li>熟悉前端语言HTML5,CSS3,JavaScript</li>
-					<li>了解MySQL, SQL Server等数据库及其基本操作</li>
-					<li>了解git使用流程</li>
-					<li>&nbsp;</li>
-				</ul>
-			</div>
-			<div class="clear"></div>
-		</section>
-		
-		
-		<section>
-			<div class="sectionTitle">
-				<h1>个人实践</h1>
-			</div>
-			
-			<div class="sectionContent">
-				<article>
-					<h2>Warthunder论坛 (毕业设计)</h2>
+					<h2>名称: 移动高级云; 所属: 卓望数码; 时间: 2018.12-? </h2>
+					<p>移动高级云由各机房物理服务器组成若干个集群接入VSphere平台再虚拟化使用,所使用到的技术栈有: Vsphere, Vrops, PowerShell, Python, Zabbix, Linux, Win; 个人在项目的工作内容如下:</p>
 					<p>
-						描述: 集成了视频功能的游戏论坛,通过django+sqlite3实现
-					</p>
-					<p>
-						实现功能: 账号的登陆注册注销流程，注册用户允许发表主题、回复、收藏、历史纪录、查看、评论视频等;<br>
-						文本输入使用Markdown,并做了XSS防注入;仅允许管理员发布视频;<br>
-						其他还有密码修改，邮件重置(对接163邮箱),验证码等
+						1.负责1k 物理服务器的稳定运作, 日常维护, 进行基线检查等安全防护操作<br />
+						2.保障VSphere平台的稳定使用, 及时响应客户报障, 保证VPS的可用性<br />
+						3.保证zabbix 监控平台 策略的准确性,监控流程的制定, 第一时间发现硬件及系统异常<br />
+						4.根据需求编写PowerShell, Python 脚本, 对工作内容优化, 提升工作效率
 					</p>
 				</article>
 			</div>
 			<div class="clear"></div>
 		</section>
 		
+		
+		
+		<!-- <section>
+			<div class="sectionTitle">
+				<h1></h1>
+			</div>
+			
+			<div class="sectionContent">
+				<article>
+					<h2></h2>
+					<p>
+					</p>
+					<p>
+					</p>
+				</article>
+			</div>
+			<div class="clear"></div>
+		</section> -->
+
+		<!-- <section>
+			<div class="sectionTitle">
+				<h1></h1>
+			</div>
+			
+			<div class="sectionContent">
+				<article>
+					<h2></h2>
+					<p>
+					</p>
+					<p>
+					</p>
+				</article>
+			</div>
+			<div class="clear"></div>
+		</section> -->
+		<!--注释使用  -->
 	</div>
 </div>
-<!-- <script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script>
-<script type="text/javascript">
-var pageTracker = _gat._getTracker("UA-3753241-1");
-pageTracker._initData();
-pageTracker._trackPageview();
-</script> -->
 </body>
 </html>
