--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!--
- * @Author: APOTOXIN4869
- * @Email: NOIR.APTX4869@gmail.com
- * @Date: 2019-06-28 13:27:11
- * @LastEditTime: 2019-10-15 17:43:59
+ * @Author: Athrun.Zala
+ * @Email: erythron@qq.com
+ * @Date: 2019-10-15 20:23:56
+ * @LastEditTime: 2019-12-04 20:09:06
  * @description: 说明
  -->
 <!DOCTYPE html>
@@ -30,7 +30,8 @@
 		
 		<div id="name">
 			<h1 class="quickFade delayTwo">郑卓文 24</h1>
-			<h4 class="quickFade delayThree">求职意向:容器, 自动化运维</h2>
+			<h4 class="quickFade delayThree">求职意向:容器,业务,自动化运维相关</h2>
+			<h4 class="quickFade delayThree">状态: 在职</h2>
 		</div>
 		
 		<div id="contactDetails" class="quickFade delayFour">
@@ -38,7 +39,7 @@
 				<li>学校: 广州大学华软软件学院</li>
 				<li>学历: 本科 (2015-2019)</li>
 				<li>专业: 网络工程系</li>
-				<li>邮箱: daptx4869@foxmail.com</li>
+				<li>邮箱: erythron@qq.com</li>
 				<li>手机: 13124960367</li>
 			</ul>
 		</div>
@@ -54,10 +55,10 @@
 			<div id="skill" class="sectionContent">
 				<ul style="list-style: none">
 					<li>了解shell编程, 熟悉CentOS,Ubuntu操作系统</li>
-					<li>熟练Python, 了解Java, HTML,Powershell</li>
-					<li>熟悉Docker容器以及K8S容器编排</li>
-					<li>熟悉Nginx, HAproxy,KeepAlived, ansible等应用的部署以及使用  </li>
-					<li>了解MySQL数据库的维护以及基本操作</li>
+					<li>熟练Python, 了解Java, HTML语言</li>
+					<li>熟悉Docker容器, K8S容器编排技术</li>
+					<li>熟悉Nginx, HAproxy, KeepAlived等中间件的部署及使用  </li>
+					<li>了解MySQL, Redis数据库的维护以及基本操作</li>
 					<li>了解git, jenkins CI/CD工具的使用</li>
 					<li>&nbsp;</li>
 				</ul>
@@ -71,7 +72,7 @@
 			
 			<div class="sectionContent">
 				<article>
-					<h2><a href="http://www.aspire-info.com/#page1">卓望数码</a>; 云支撑部系统工程师</h2>
+					<h2><a href="http://www.aspirecn.com/indexs.html">卓望数码</a>; 云支撑部系统工程师</h2>
 					<p class="subDetails">2018.12 - ? </p>
 					<p>负责移动高级云相关服务产品的落地执行以及移动南方各地区服务设施的日常维护</p>
 				</article>
@@ -93,12 +94,28 @@
 		
 			<div class="sectionContent">		
 				<article>
-					<h2>名称: 移动高级云; 所属: 卓望数码; 时间: 2018.12-? </h2>
-					<p>移动高级云由各机房物理服务器组成若干个集群接入VSphere平台再虚拟化使用,所使用到的技术栈有: Vsphere, Vrops, PowerShell, Python, Zabbix, Linux, Win; 个人在项目的工作内容如下:</p>
+					<h2>移动融合云; 所属: 卓望数码; 时间: 2018.12-? </h2>
 					<p>
-						1.负责1k 物理服务器的稳定运作, 日常维护, 进行基线检查等安全防护操作<br />
+						移动高级云由各机房ESXI服务器组成若干个集群接入VSphere平台再虚拟化使用,<br />
+						所使用到的技术栈有: Vsphere, Vrops, PowerShell, Python, Zabbix, Linux, Win; 工作内容如下:
+					</p>
+					<p>
+						1.负责1k+物理服务器的稳定运作, 日常维护, 进行基线检查等安全防护操作<br />
 						2.保障VSphere平台的稳定使用, 及时响应客户报障, 保证VPS的可用性<br />
-						3.保证zabbix 监控平台 策略的准确性,监控流程的制定, 第一时间发现硬件及系统异常<br />
+						3.保证zabbix 监控平台策略的准确性,监控流程的制定, 第一时间发现硬件及系统异常<br />
+						4.根据需求编写PowerShell, Python 脚本, 对工作内容优化, 提升工作效率
+					</p>
+				</article>
+				<article>
+					<h2>移动融合云; 所属: 卓望数码; 时间: 2018.12-? </h2>
+					<p>
+						移动高级云由各机房ESXI服务器组成若干个集群接入VSphere平台再虚拟化使用,<br />
+						所使用到的技术栈有: Vsphere, Vrops, PowerShell, Python, Zabbix, Linux, Win; 工作内容如下:
+					</p>
+					<p>
+						1.负责1k+物理服务器的稳定运作, 日常维护, 进行基线检查等安全防护操作<br />
+						2.保障VSphere平台的稳定使用, 及时响应客户报障, 保证VPS的可用性<br />
+						3.保证zabbix 监控平台策略的准确性,监控流程的制定, 第一时间发现硬件及系统异常<br />
 						4.根据需求编写PowerShell, Python 脚本, 对工作内容优化, 提升工作效率
 					</p>
 				</article>
