--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: Athrun.Zala
  * @Email: erythron@qq.com
  * @Date: 2019-10-15 20:23:56
- * @LastEditTime: 2019-12-04 20:09:06
+ * @LastEditTime : 2020-01-04 20:55:40
  * @description: 说明
  -->
 <!DOCTYPE html>
@@ -15,23 +15,23 @@
 <meta charset="UTF-8"> 
 
 <link type="text/css" rel="stylesheet" href="style.css">
-<link href='http://fonts.googleapis.com/css?family=Rokkitt:400,700|Lato:400,300' rel='stylesheet' type='text/css'>
+<!-- <link href='http://fonts.googleapis.com/css?family=Rokkitt:400,700|Lato:400,300' rel='stylesheet' type='text/css'> -->
+<link type="text/css" rel="stylesheet" href="font.css:400,700|Lato:400,300">
 
-<!--[if lt IE 9]>
-<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-<![endif]-->
 </head>
 <body id="top">
 <div id="cv" class="instaFade">
 	<div class="mainDetails">
 		<div id="headshot" class="quickFade">
-			<img src="headshot.jpg" alt="Alan Smith" />
+			<img src="info.jpg" alt="Alan Smith" />
+			<p class="subDetails">↑ 网页版地址 ↑</p>
 		</div>
 		
 		<div id="name">
 			<h1 class="quickFade delayTwo">郑卓文 24</h1>
-			<h4 class="quickFade delayThree">求职意向:容器,业务,自动化运维相关</h2>
+			<h4 class="quickFade delayThree">求职意向:容器,自动化运维</h2>
 			<h4 class="quickFade delayThree">状态: 在职</h2>
+			<h4 class="quickFade delayThree">工作经验: 一年</h2>
 		</div>
 		
 		<div id="contactDetails" class="quickFade delayFour">
@@ -55,11 +55,13 @@
 			<div id="skill" class="sectionContent">
 				<ul style="list-style: none">
 					<li>了解shell编程, 熟悉CentOS,Ubuntu操作系统</li>
-					<li>熟练Python, 了解Java, HTML语言</li>
+					<li>掌握Python, 熟悉Java, HTML语言</li>
 					<li>熟悉Docker容器, K8S容器编排技术</li>
-					<li>熟悉Nginx, HAproxy, KeepAlived等中间件的部署及使用  </li>
-					<li>了解MySQL, Redis数据库的维护以及基本操作</li>
-					<li>了解git, jenkins CI/CD工具的使用</li>
+					<li>熟悉Ceph存储的配置维护, 了解其存储原理</li>
+					<li>了解数据库原理, 熟悉MySQL, Redis数据库的部署,配置维护</li>
+					<li>熟悉Nginx, HAproxy, KeepAlived等中间件的部署,配置维护  </li>
+					<li>熟悉ansible自动化配置管理工具,了解其playbook编写</li>
+					<li>了解git, jenkins等CI/CD工具的使用</li>
 					<li>&nbsp;</li>
 				</ul>
 			</div>
@@ -74,7 +76,7 @@
 				<article>
 					<h2><a href="http://www.aspirecn.com/indexs.html">卓望数码</a>; 云支撑部系统工程师</h2>
 					<p class="subDetails">2018.12 - ? </p>
-					<p>负责移动高级云相关服务产品的落地执行以及移动南方各地区服务设施的日常维护</p>
+					<p>负责广东移动融合云资源分配管理以及服务设施的日常维护</p>
 				</article>
 				
 				<article>
@@ -90,33 +92,33 @@
 		<section>
 			<div class="sectionTitle">
 				<h1>项目</h1>
+				<h1>内容</h1>
 			</div>
 		
 			<div class="sectionContent">		
 				<article>
-					<h2>移动融合云; 所属: 卓望数码; 时间: 2018.12-? </h2>
+					<h2>移动融合云项目; 公司: 卓望数码 </h2>
 					<p>
-						移动高级云由各机房ESXI服务器组成若干个集群接入VSphere平台再虚拟化使用,<br />
-						所使用到的技术栈有: Vsphere, Vrops, PowerShell, Python, Zabbix, Linux, Win; 工作内容如下:
-					</p>
-					<p>
-						1.负责1k+物理服务器的稳定运作, 日常维护, 进行基线检查等安全防护操作<br />
-						2.保障VSphere平台的稳定使用, 及时响应客户报障, 保证VPS的可用性<br />
-						3.保证zabbix 监控平台策略的准确性,监控流程的制定, 第一时间发现硬件及系统异常<br />
-						4.根据需求编写PowerShell, Python 脚本, 对工作内容优化, 提升工作效率
+						移动融合云由移动各机房ESXI物理服务器接入到VSphere虚拟化平台构成集群后管理使用,
+						所使用到的技术栈有: Vsphere, Vrops, PowerShell, Python, Zabbix, Linux, Win; 工作内容如下: <br>
+						1.负责1k+物理服务器的稳定运作, 日常维护, 进行基线检查等安全防护操作.<br>
+						2.保障VSphere平台的稳定使用, 及时响应客户报障, 保证VPS的可用性.<br>
+						3.保证zabbix 监控平台策略的准确性, 第一时间发现硬件及系统异常.<br>
+						4.根据需求编写PowerShell, Python 脚本, 对工作内容优化, 提升工作效率.
 					</p>
 				</article>
 				<article>
-					<h2>移动融合云; 所属: 卓望数码; 时间: 2018.12-? </h2>
+					<h2>广东网优项目; 公司: 卓望数码 </h2>
 					<p>
-						移动高级云由各机房ESXI服务器组成若干个集群接入VSphere平台再虚拟化使用,<br />
-						所使用到的技术栈有: Vsphere, Vrops, PowerShell, Python, Zabbix, Linux, Win; 工作内容如下:
+						该项目处于调研阶段, 后续没有投入生产. 使用到的技术栈有: K8S, Docker, Ceph 
 					</p>
 					<p>
-						1.负责1k+物理服务器的稳定运作, 日常维护, 进行基线检查等安全防护操作<br />
-						2.保障VSphere平台的稳定使用, 及时响应客户报障, 保证VPS的可用性<br />
-						3.保证zabbix 监控平台策略的准确性,监控流程的制定, 第一时间发现硬件及系统异常<br />
-						4.根据需求编写PowerShell, Python 脚本, 对工作内容优化, 提升工作效率
+						在该项目中, 我参与了K8S集群的高可用部署(HAproxy和KeepAlived); ETCD的数据备份与恢复; 挂载Ceph为后端存储等;
+						项目外, 个人自行学习Docker, K8S相关原理, 了解其组件构成与运行. <br>
+						Docker方面: 学习相关命令的使用, 了解镜像的构成原理, Dockerfile文件的编写等; <br> 
+						K8S方面:了解其组件构成以及使用,如Pod的部署; RC,RS控制器的使用; 服务发现; 持久卷的使用; 角色的权限控制; helm, ingress的部署与使用等<br> 
+
+
 					</p>
 				</article>
 			</div>
@@ -125,22 +127,25 @@
 		
 		
 		
-		<!-- <section>
+		<section>
 			<div class="sectionTitle">
-				<h1></h1>
+				<h1>自我</h1>
+				<h1>评价</h1>
 			</div>
 			
 			<div class="sectionContent">
 				<article>
-					<h2></h2>
+					<h2> </h2>
 					<p>
+						喜欢EPIC音乐(曾任职学校音乐网负责人);<br>
+						有一定的学习钻研心, 接受新事物的速度快, 目前在不断提高工作能力; <br>
+						服从上级安排, 与同事相处愉快, 工作认真负责.<br>
 					</p>
-					<p>
-					</p>
+					<h2>最后, 谢谢你的浏览, 希望获得机会与你共事~</h2>
 				</article>
 			</div>
 			<div class="clear"></div>
-		</section> -->
+		</section>
 
 		<!-- <section>
 			<div class="sectionTitle">
