--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: Athrun.Zala
  * @Email: erythron@qq.com
  * @Date: 2019-10-15 20:23:56
- * @LastEditTime : 2020-01-04 20:55:40
+ * @LastEditTime : 2020-01-04 21:09:01
  * @description: 说明
  -->
 <!DOCTYPE html>
@@ -29,7 +29,7 @@
 		
 		<div id="name">
 			<h1 class="quickFade delayTwo">郑卓文 24</h1>
-			<h4 class="quickFade delayThree">求职意向:容器,自动化运维</h2>
+			<h4 class="quickFade delayThree">求职意向:容器,系统运维</h2>
 			<h4 class="quickFade delayThree">状态: 在职</h2>
 			<h4 class="quickFade delayThree">工作经验: 一年</h2>
 		</div>
@@ -74,14 +74,14 @@
 			
 			<div class="sectionContent">
 				<article>
-					<h2><a href="http://www.aspirecn.com/indexs.html">卓望数码</a>; 云支撑部系统工程师</h2>
-					<p class="subDetails">2018.12 - ? </p>
+					<h2><a href="http://www.aspirecn.com/indexs.html">卓望数码</a>; 服务业务部; 系统工程师; 2018.12 - 今</h2>
+					<!-- <p class="subDetails">2018.12 - ? </p> -->
 					<p>负责广东移动融合云资源分配管理以及服务设施的日常维护</p>
 				</article>
 				
 				<article>
-					<h2>广州银行信用卡中心; 系统部信息安全实习生</h2>
-					<p class="subDetails">2018.09 - 2018.12</p>
+					<h2>广州银行信用卡中心; 信息安全实习生; 2018.09 - 2018.12</h2>
+					<!-- <p class="subDetails">2018.09 - 2018.12</p> -->
 					<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 						协助信息安全专员对内部web系统进行渗透测试,对系统的上线,迭代进行审核;
 						使用各信息安全工具,分析监控日志,进行日常维护记录</p>
