--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: Athrun.Zala
  * @Email: erythron@qq.com
  * @Date: 2019-10-15 20:23:56
- * @LastEditTime : 2020-01-04 21:09:01
+ * @LastEditTime : 2020-01-04 21:13:25
  * @description: 说明
  -->
 <!DOCTYPE html>
@@ -82,9 +82,10 @@
 				<article>
 					<h2>广州银行信用卡中心; 信息安全实习生; 2018.09 - 2018.12</h2>
 					<!-- <p class="subDetails">2018.09 - 2018.12</p> -->
-					<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+					<p>
 						协助信息安全专员对内部web系统进行渗透测试,对系统的上线,迭代进行审核;
-						使用各信息安全工具,分析监控日志,进行日常维护记录</p>
+						使用各信息安全工具,分析监控日志,进行日常维护.
+					</p>
 				</article>
 			</div>
 			<div class="clear"></div>
@@ -101,24 +102,21 @@
 					<p>
 						移动融合云由移动各机房ESXI物理服务器接入到VSphere虚拟化平台构成集群后管理使用,
 						所使用到的技术栈有: Vsphere, Vrops, PowerShell, Python, Zabbix, Linux, Win; 工作内容如下: <br>
-						1.负责1k+物理服务器的稳定运作, 日常维护, 进行基线检查等安全防护操作.<br>
-						2.保障VSphere平台的稳定使用, 及时响应客户报障, 保证VPS的可用性.<br>
-						3.保证zabbix 监控平台策略的准确性, 第一时间发现硬件及系统异常.<br>
-						4.根据需求编写PowerShell, Python 脚本, 对工作内容优化, 提升工作效率.
+						1. 负责1k+物理服务器的稳定运作, 日常维护, 进行基线检查等安全防护操作.<br>
+						2. 保障VSphere平台的稳定使用, 及时响应客户报障, 保证VPS的可用性.<br>
+						3. 保证zabbix 监控平台策略的准确性, 第一时间发现硬件及系统异常.<br>
+						4. 根据需求编写PowerShell, Python 脚本, 对工作内容优化, 提升工作效率.
 					</p>
 				</article>
 				<article>
 					<h2>广东网优项目; 公司: 卓望数码 </h2>
 					<p>
-						该项目处于调研阶段, 后续没有投入生产. 使用到的技术栈有: K8S, Docker, Ceph 
-					</p>
-					<p>
+						该项目处于调研阶段, 后续没有投入生产. 使用到的技术栈有: K8S, Docker, Ceph等. <br>
 						在该项目中, 我参与了K8S集群的高可用部署(HAproxy和KeepAlived); ETCD的数据备份与恢复; 挂载Ceph为后端存储等;
 						项目外, 个人自行学习Docker, K8S相关原理, 了解其组件构成与运行. <br>
 						Docker方面: 学习相关命令的使用, 了解镜像的构成原理, Dockerfile文件的编写等; <br> 
-						K8S方面:了解其组件构成以及使用,如Pod的部署; RC,RS控制器的使用; 服务发现; 持久卷的使用; 角色的权限控制; helm, ingress的部署与使用等<br> 
-
-
+						K8S方面:了解其组件构成以及使用,如Pod的部署; RC,RS控制器的使用; 服务发现; 持久卷的使用; 
+						角色的权限控制; helm, ingress的部署与使用等 <br> 
 					</p>
 				</article>
 			</div>
