--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: Athrun.Zala
  * @Email: erythron@qq.com
  * @Date: 2019-10-15 20:23:56
- * @LastEditTime : 2020-01-04 21:13:25
+ * @LastEditTime : 2020-01-05 23:07:44
  * @description: 说明
  -->
 <!DOCTYPE html>
@@ -50,18 +50,39 @@
 		<section>
 			<div class="sectionTitle">
 				<h1>技能</h1>
+				<h1>掌握</h1>
 			</div>
 			
 			<div id="skill" class="sectionContent">
 				<ul style="list-style: none">
-					<li>了解shell编程, 熟悉CentOS,Ubuntu操作系统</li>
-					<li>掌握Python, 熟悉Java, HTML语言</li>
-					<li>熟悉Docker容器, K8S容器编排技术</li>
-					<li>熟悉Ceph存储的配置维护, 了解其存储原理</li>
-					<li>了解数据库原理, 熟悉MySQL, Redis数据库的部署,配置维护</li>
-					<li>熟悉Nginx, HAproxy, KeepAlived等中间件的部署,配置维护  </li>
-					<li>熟悉ansible自动化配置管理工具,了解其playbook编写</li>
-					<li>了解git, jenkins等CI/CD工具的使用</li>
+					<li><progress  value="65" max="100"></progress> 
+						了解shell编程, 熟悉CentOS,Ubuntu操作系统</li>
+					<li>
+						<progress value="70" max="100"></progress>
+						掌握Python, 熟悉Java, HTML语言
+					</li>
+					<li>
+						<progress value="65" max="100"></progress>
+						熟悉Docker容器, K8S容器编排技术
+					</li>
+					<li><progress value="60" max="100"></progress>
+						熟悉Ceph存储的配置维护, 了解其存储原理
+					</li>
+					<li><progress value="55" max="100"></progress>
+						了解数据库原理, 熟悉MySQL, Redis数据库的部署,配置维护
+					</li>
+					<li>
+						<progress value="50" max="100"></progress>
+						熟悉ansible自动化配置管理工具,了解其playbook编写
+					</li>
+					<li>
+						<progress value="40" max="100"></progress>
+						了解Nginx, HAproxy, KeepAlived等中间件的部署,配置
+					</li>
+					<li>
+						<progress value="40" max="100"></progress>
+						了解git, jenkins等CI/CD工具的使用
+					</li>
 					<li>&nbsp;</li>
 				</ul>
 			</div>
