--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: Athrun.Zala
  * @Email: erythron@qq.com
  * @Date: 2019-10-15 20:23:56
- * @LastEditTime : 2020-01-05 23:07:44
+ * @LastEditTime : 2020-01-06 19:34:31
  * @description: 说明
  -->
 <!DOCTYPE html>
@@ -160,7 +160,7 @@
 						有一定的学习钻研心, 接受新事物的速度快, 目前在不断提高工作能力; <br>
 						服从上级安排, 与同事相处愉快, 工作认真负责.<br>
 					</p>
-					<h2>最后, 谢谢你的浏览, 希望获得机会与你共事~</h2>
+					<h2>如需<a href="https://gitee.com/erythron/pdf_resume/raw/master/resume.pdf"">PDF版</a>麻烦点击; 谢谢您的浏览, 希望获得机会与您共事~</h2>
 				</article>
 			</div>
 			<div class="clear"></div>
