--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: Athrun.Zala
  * @Email: erythron@qq.com
  * @Date: 2019-10-15 20:23:56
- * @LastEditTime : 2020-01-06 19:34:31
+ * @LastEditTime : 2020-01-18 00:19:11
  * @description: 说明
  -->
 <!DOCTYPE html>
@@ -38,7 +38,7 @@
 			<ul>
 				<li>学校: 广州大学华软软件学院</li>
 				<li>学历: 本科 (2015-2019)</li>
-				<li>专业: 网络工程系</li>
+				<li>专业: 网络技术系</li>
 				<li>邮箱: erythron@qq.com</li>
 				<li>手机: 13124960367</li>
 			</ul>
@@ -59,7 +59,7 @@
 						了解shell编程, 熟悉CentOS,Ubuntu操作系统</li>
 					<li>
 						<progress value="70" max="100"></progress>
-						掌握Python, 熟悉Java, HTML语言
+						熟悉Python, 了解Java, HTML语言
 					</li>
 					<li>
 						<progress value="65" max="100"></progress>
@@ -95,7 +95,7 @@
 			
 			<div class="sectionContent">
 				<article>
-					<h2><a href="http://www.aspirecn.com/indexs.html">卓望数码</a>; 服务业务部; 系统工程师; 2018.12 - 今</h2>
+					<h2><a href="http://www.aspirecn.com/indexs.html">卓望数码技术有限公司</a>;  系统工程师; 2018.12 - 今</h2>
 					<!-- <p class="subDetails">2018.12 - ? </p> -->
 					<p>负责广东移动融合云资源分配管理以及服务设施的日常维护</p>
 				</article>
@@ -125,8 +125,8 @@
 						所使用到的技术栈有: Vsphere, Vrops, PowerShell, Python, Zabbix, Linux, Win; 工作内容如下: <br>
 						1. 负责1k+物理服务器的稳定运作, 日常维护, 进行基线检查等安全防护操作.<br>
 						2. 保障VSphere平台的稳定使用, 及时响应客户报障, 保证VPS的可用性.<br>
-						3. 保证zabbix 监控平台策略的准确性, 第一时间发现硬件及系统异常.<br>
-						4. 根据需求编写PowerShell, Python 脚本, 对工作内容优化, 提升工作效率.
+						3. 根据需求编写PowerShell, Python脚本, 对工作内容优化, 提升工作效率.<br>
+						4. 依靠Zabbix监控平台, 过滤无效告警, 在发现硬件及系统异常后及时修复.
 					</p>
 				</article>
 				<article>
@@ -136,7 +136,7 @@
 						在该项目中, 我参与了K8S集群的高可用部署(HAproxy和KeepAlived); ETCD的数据备份与恢复; 挂载Ceph为后端存储等;
 						项目外, 个人自行学习Docker, K8S相关原理, 了解其组件构成与运行. <br>
 						Docker方面: 学习相关命令的使用, 了解镜像的构成原理, Dockerfile文件的编写等; <br> 
-						K8S方面:了解其组件构成以及使用,如Pod的部署; RC,RS控制器的使用; 服务发现; 持久卷的使用; 
+						K8S方面:了解其组件构成以及使用,如Pod的部署; RC,RS控制器的使用; 服务发现; 持久卷的配置与使用; 
 						角色的权限控制; helm, ingress的部署与使用等 <br> 
 					</p>
 				</article>
