--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: Athrun.Zala
  * @Email: erythron@qq.com
  * @Date: 2019-10-15 20:23:56
- * @LastEditTime : 2020-01-18 00:19:11
+ * @LastEditTime : 2020-01-18 00:27:08
  * @description: 说明
  -->
 <!DOCTYPE html>
@@ -95,7 +95,7 @@
 			
 			<div class="sectionContent">
 				<article>
-					<h2><a href="http://www.aspirecn.com/indexs.html">卓望数码技术有限公司</a>;  系统工程师; 2018.12 - 今</h2>
+					<h2>卓望数码技术有限公司;  系统工程师; 2018.12 - 今</h2>
 					<!-- <p class="subDetails">2018.12 - ? </p> -->
 					<p>负责广东移动融合云资源分配管理以及服务设施的日常维护</p>
 				</article>
