--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: Athrun.Zala
  * @Email: erythron@qq.com
  * @Date: 2019-10-15 20:23:56
- * @LastEditTime : 2020-01-18 00:27:08
+ * @LastEditTime : 2020-01-19 20:18:11
  * @description: 说明
  -->
 <!DOCTYPE html>
@@ -132,7 +132,7 @@
 				<article>
 					<h2>广东网优项目; 公司: 卓望数码 </h2>
 					<p>
-						该项目处于调研阶段, 后续没有投入生产. 使用到的技术栈有: K8S, Docker, Ceph等. <br>
+						该项目使用到的技术栈有: K8S, Docker, Ceph等. <br>
 						在该项目中, 我参与了K8S集群的高可用部署(HAproxy和KeepAlived); ETCD的数据备份与恢复; 挂载Ceph为后端存储等;
 						项目外, 个人自行学习Docker, K8S相关原理, 了解其组件构成与运行. <br>
 						Docker方面: 学习相关命令的使用, 了解镜像的构成原理, Dockerfile文件的编写等; <br> 
