--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: Athrun.Zala
  * @Email: erythron@qq.com
  * @Date: 2019-10-15 20:23:56
- * @LastEditTime : 2020-01-19 20:18:11
+ * @LastEditTime : 2020-02-04 15:44:10
  * @description: 说明
  -->
 <!DOCTYPE html>
@@ -59,7 +59,7 @@
 						了解shell编程, 熟悉CentOS,Ubuntu操作系统</li>
 					<li>
 						<progress value="70" max="100"></progress>
-						熟悉Python, 了解Java, HTML语言
+						熟悉Python,了解其django框架, 了解HTML语言
 					</li>
 					<li>
 						<progress value="65" max="100"></progress>
