--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: Athrun.Zala
  * @Email: erythron@qq.com
  * @Date: 2019-10-15 20:23:56
- * @LastEditTime : 2020-02-04 15:44:10
+ * @LastEditTime : 2020-02-11 11:07:38
  * @description: 说明
  -->
 <!DOCTYPE html>
@@ -59,7 +59,7 @@
 						了解shell编程, 熟悉CentOS,Ubuntu操作系统</li>
 					<li>
 						<progress value="70" max="100"></progress>
-						熟悉Python,了解其django框架, 了解HTML语言
+						熟悉Python,会使用其Django框架开发一定的web页面
 					</li>
 					<li>
 						<progress value="65" max="100"></progress>
@@ -133,10 +133,10 @@
 					<h2>广东网优项目; 公司: 卓望数码 </h2>
 					<p>
 						该项目使用到的技术栈有: K8S, Docker, Ceph等. <br>
-						在该项目中, 我参与了K8S集群的高可用部署(HAproxy和KeepAlived); ETCD的数据备份与恢复; 挂载Ceph为后端存储等;
+						在该项目中, 我参与了K8S集群的高可用部署(使用HAproxy和KeepAlived搭建); ETCD的数据备份与恢复; 挂载Ceph为后端存储等;
 						项目外, 个人自行学习Docker, K8S相关原理, 了解其组件构成与运行. <br>
 						Docker方面: 学习相关命令的使用, 了解镜像的构成原理, Dockerfile文件的编写等; <br> 
-						K8S方面:了解其组件构成以及使用,如Pod的部署; RC,RS控制器的使用; 服务发现; 持久卷的配置与使用; 
+						K8S方面:了解其组件构成以及使用,如Pod, 控制器的部署; 服务发现; 持久卷的配置与使用; 
 						角色的权限控制; helm, ingress的部署与使用等 <br> 
 					</p>
 				</article>
