--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: Athrun.Zala
  * @Email: erythron@qq.com
  * @Date: 2019-10-15 20:23:56
- * @LastEditTime : 2020-02-11 11:07:38
+ * @LastEditTime : 2020-02-13 15:26:47
  * @description: 说明
  -->
 <!DOCTYPE html>
@@ -59,7 +59,7 @@
 						了解shell编程, 熟悉CentOS,Ubuntu操作系统</li>
 					<li>
 						<progress value="70" max="100"></progress>
-						熟悉Python,会使用其Django框架开发一定的web页面
+						熟悉Python语言, 熟练编写python脚本以及使用django框架
 					</li>
 					<li>
 						<progress value="65" max="100"></progress>
