--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: Athrun.Zala
  * @Email: erythron@qq.com
  * @Date: 2019-10-15 20:23:56
- * @LastEditTime : 2020-02-13 15:26:47
+ * @LastEditTime: 2020-02-16 21:41:07
  * @description: 说明
  -->
 <!DOCTYPE html>
@@ -59,25 +59,25 @@
 						了解shell编程, 熟悉CentOS,Ubuntu操作系统</li>
 					<li>
 						<progress value="70" max="100"></progress>
-						熟悉Python语言, 熟练编写python脚本以及使用django框架
+						熟悉Python语言, 有脚本编写经验,了解其django框架
 					</li>
 					<li>
 						<progress value="65" max="100"></progress>
 						熟悉Docker容器, K8S容器编排技术
 					</li>
 					<li><progress value="60" max="100"></progress>
-						熟悉Ceph存储的配置维护, 了解其存储原理
-					</li>
-					<li><progress value="55" max="100"></progress>
 						了解数据库原理, 熟悉MySQL, Redis数据库的部署,配置维护
+					</li>
+					<li><progress value="60" max="100"></progress>
+						熟悉Ceph存储的配置维护, 了解其存储原理
 					</li>
 					<li>
 						<progress value="50" max="100"></progress>
 						熟悉ansible自动化配置管理工具,了解其playbook编写
 					</li>
 					<li>
-						<progress value="40" max="100"></progress>
-						了解Nginx, HAproxy, KeepAlived等中间件的部署,配置
+						<progress value="50" max="100"></progress>
+						熟悉Nginx, HAproxy, KeepAlived等中间件的部署,配置
 					</li>
 					<li>
 						<progress value="40" max="100"></progress>
