v4_2020.02.24 评价, 部分技能名词更改

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: Athrun.Zala
  * @Email: erythron@qq.com
  * @Date: 2019-10-15 20:23:56
- * @LastEditTime: 2020-02-16 21:41:07
+ * @LastEditTime: 2020-02-24 17:07:46
  * @description: 说明
  -->
 <!DOCTYPE html>
@@ -56,7 +56,7 @@
 			<div id="skill" class="sectionContent">
 				<ul style="list-style: none">
 					<li><progress  value="65" max="100"></progress> 
-						了解shell编程, 熟悉CentOS,Ubuntu操作系统</li>
+						了解Shell编程, 熟悉CentOS,Ubuntu操作系统</li>
 					<li>
 						<progress value="70" max="100"></progress>
 						熟悉Python语言, 有脚本编写经验,了解其django框架
@@ -73,7 +73,7 @@
 					</li>
 					<li>
 						<progress value="50" max="100"></progress>
-						熟悉ansible自动化配置管理工具,了解其playbook编写
+						熟悉ansible自动化配置管理工具
 					</li>
 					<li>
 						<progress value="50" max="100"></progress>
@@ -81,7 +81,7 @@
 					</li>
 					<li>
 						<progress value="40" max="100"></progress>
-						了解git, jenkins等CI/CD工具的使用
+						了解git, jenkins的使用
 					</li>
 					<li>&nbsp;</li>
 				</ul>
@@ -95,7 +95,7 @@
 			
 			<div class="sectionContent">
 				<article>
-					<h2>卓望数码技术有限公司;  系统工程师; 2018.12 - 今</h2>
+					<h2>卓望数码(移动子公司);  系统运维工程师; 2018.12 - 今</h2>
 					<!-- <p class="subDetails">2018.12 - ? </p> -->
 					<p>负责广东移动融合云资源分配管理以及服务设施的日常维护</p>
 				</article>
@@ -122,7 +122,7 @@
 					<h2>移动融合云项目; 公司: 卓望数码 </h2>
 					<p>
 						移动融合云由移动各机房ESXI物理服务器接入到VSphere虚拟化平台构成集群后管理使用,
-						所使用到的技术栈有: Vsphere, Vrops, PowerShell, Python, Zabbix, Linux, Win; 工作内容如下: <br>
+						所使用到的技术栈有: VSphere, VRops, PowerShell, Python, Zabbix, Linux, Win; 工作内容如下: <br>
 						1. 负责1k+物理服务器的稳定运作, 日常维护, 进行基线检查等安全防护操作.<br>
 						2. 保障VSphere平台的稳定使用, 及时响应客户报障, 保证VPS的可用性.<br>
 						3. 根据需求编写PowerShell, Python脚本, 对工作内容优化, 提升工作效率.<br>
@@ -157,10 +157,10 @@
 					<h2> </h2>
 					<p>
 						喜欢EPIC音乐(曾任职学校音乐网负责人);<br>
-						有一定的学习钻研心, 接受新事物的速度快, 目前在不断提高工作能力; <br>
-						服从上级安排, 与同事相处愉快, 工作认真负责.<br>
+						有一定的学习钻研心, 遇到新问题能通过google或官方文档去学习, 解决; 接受新事物的速度快, 目前在不断提高技术与工作能力; <br>
+						工作认真负责, 服从上级安排, 与同事相处愉快.<br>
 					</p>
-					<h2>如需<a href="https://gitee.com/erythron/pdf_resume/raw/master/resume.pdf"">PDF版</a>麻烦点击; 谢谢您的浏览, 希望获得机会与您共事~</h2>
+					<h2>如需<a href="https://gitee.com/erythron/pdf_resume/raw/master/resume.pdf"">PDF版</a>麻烦点击; 感谢您的浏览. </h2>
 				</article>
 			</div>
 			<div class="clear"></div>
