v4_2020.02.25 git修改, 去掉年龄

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: Athrun.Zala
  * @Email: erythron@qq.com
  * @Date: 2019-10-15 20:23:56
- * @LastEditTime: 2020-02-24 17:07:46
+ * @LastEditTime: 2020-02-25 00:20:10
  * @description: 说明
  -->
 <!DOCTYPE html>
@@ -28,7 +28,7 @@
 		</div>
 		
 		<div id="name">
-			<h1 class="quickFade delayTwo">郑卓文 24</h1>
+			<h1 class="quickFade delayTwo">郑卓文</h1>
 			<h4 class="quickFade delayThree">求职意向:容器,系统运维</h2>
 			<h4 class="quickFade delayThree">状态: 在职</h2>
 			<h4 class="quickFade delayThree">工作经验: 一年</h2>
@@ -56,7 +56,7 @@
 			<div id="skill" class="sectionContent">
 				<ul style="list-style: none">
 					<li><progress  value="65" max="100"></progress> 
-						了解Shell编程, 熟悉CentOS,Ubuntu操作系统</li>
+						了解Shell编程, 熟悉CentOS,Debian操作系统</li>
 					<li>
 						<progress value="70" max="100"></progress>
 						熟悉Python语言, 有脚本编写经验,了解其django框架
@@ -80,8 +80,8 @@
 						熟悉Nginx, HAproxy, KeepAlived等中间件的部署,配置
 					</li>
 					<li>
-						<progress value="40" max="100"></progress>
-						了解git, jenkins的使用
+						<progress value="50" max="100"></progress>
+						了解CI/CD流程, 熟悉Git, Jenkins等工具的使用
 					</li>
 					<li>&nbsp;</li>
 				</ul>
