--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: Athrun.Zala
  * @Email: erythron@qq.com
  * @Date: 2019-10-15 20:23:56
- * @LastEditTime: 2020-02-25 00:20:10
+ * @LastEditTime: 2020-02-25 00:29:43
  * @description: 说明
  -->
 <!DOCTYPE html>
@@ -55,21 +55,29 @@
 			
 			<div id="skill" class="sectionContent">
 				<ul style="list-style: none">
-					<li><progress  value="65" max="100"></progress> 
+					<li><progress  value="70" max="100"></progress> 
 						了解Shell编程, 熟悉CentOS,Debian操作系统</li>
 					<li>
-						<progress value="70" max="100"></progress>
+						<progress value="75" max="100"></progress>
 						熟悉Python语言, 有脚本编写经验,了解其django框架
 					</li>
 					<li>
-						<progress value="65" max="100"></progress>
+						<progress value="70" max="100"></progress>
 						熟悉Docker容器, K8S容器编排技术
 					</li>
-					<li><progress value="60" max="100"></progress>
+					<li><progress value="65" max="100"></progress>
 						了解数据库原理, 熟悉MySQL, Redis数据库的部署,配置维护
 					</li>
-					<li><progress value="60" max="100"></progress>
+					<li><progress value="65" max="100"></progress>
 						熟悉Ceph存储的配置维护, 了解其存储原理
+					</li>
+					<li>
+						<progress value="60" max="100"></progress>
+						了解CI/CD流程, 熟悉Git, Jenkins等工具的使用
+					</li>
+					<li>
+						<progress value="55" max="100"></progress>
+						熟悉Nginx, HAproxy, KeepAlived等中间件的部署,配置
 					</li>
 					<li>
 						<progress value="50" max="100"></progress>
@@ -77,11 +85,7 @@
 					</li>
 					<li>
 						<progress value="50" max="100"></progress>
-						熟悉Nginx, HAproxy, KeepAlived等中间件的部署,配置
-					</li>
-					<li>
-						<progress value="50" max="100"></progress>
-						了解CI/CD流程, 熟悉Git, Jenkins等工具的使用
+						有公有云使用经验, 阿里云, 腾讯云, BWH等
 					</li>
 					<li>&nbsp;</li>
 				</ul>
