--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: Athrun.Zala
  * @Email: erythron@qq.com
  * @Date: 2019-10-15 20:23:56
- * @LastEditTime: 2020-02-25 00:29:43
+ * @LastEditTime: 2020-02-25 00:36:49
  * @description: 说明
  -->
 <!DOCTYPE html>
@@ -59,7 +59,7 @@
 						了解Shell编程, 熟悉CentOS,Debian操作系统</li>
 					<li>
 						<progress value="75" max="100"></progress>
-						熟悉Python语言, 有脚本编写经验,了解其django框架
+						熟悉Python语言, 有脚本编写经验,了解其Django框架
 					</li>
 					<li>
 						<progress value="70" max="100"></progress>
@@ -81,7 +81,7 @@
 					</li>
 					<li>
 						<progress value="50" max="100"></progress>
-						熟悉ansible自动化配置管理工具
+						熟悉Ansible自动化运维配置管理工具
 					</li>
 					<li>
 						<progress value="50" max="100"></progress>
@@ -129,7 +129,7 @@
 						所使用到的技术栈有: VSphere, VRops, PowerShell, Python, Zabbix, Linux, Win; 工作内容如下: <br>
 						1. 负责1k+物理服务器的稳定运作, 日常维护, 进行基线检查等安全防护操作.<br>
 						2. 保障VSphere平台的稳定使用, 及时响应客户报障, 保证VPS的可用性.<br>
-						3. 根据需求编写PowerShell, Python脚本, 对工作内容优化, 提升工作效率.<br>
+						3. 根据需求编写PowerShell或Python脚本, 对工作内容优化, 提升工作效率.<br>
 						4. 依靠Zabbix监控平台, 过滤无效告警, 在发现硬件及系统异常后及时修复.
 					</p>
 				</article>
@@ -141,7 +141,7 @@
 						项目外, 个人自行学习Docker, K8S相关原理, 了解其组件构成与运行. <br>
 						Docker方面: 学习相关命令的使用, 了解镜像的构成原理, Dockerfile文件的编写等; <br> 
 						K8S方面:了解其组件构成以及使用,如Pod, 控制器的部署; 服务发现; 持久卷的配置与使用; 
-						角色的权限控制; helm, ingress的部署与使用等 <br> 
+						角色的权限控制; Helm, Ingress的部署与使用等 <br> 
 					</p>
 				</article>
 			</div>
@@ -160,7 +160,6 @@
 				<article>
 					<h2> </h2>
 					<p>
-						喜欢EPIC音乐(曾任职学校音乐网负责人);<br>
 						有一定的学习钻研心, 遇到新问题能通过google或官方文档去学习, 解决; 接受新事物的速度快, 目前在不断提高技术与工作能力; <br>
 						工作认真负责, 服从上级安排, 与同事相处愉快.<br>
 					</p>
