--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: Athrun.Zala
  * @Email: erythron@qq.com
  * @Date: 2019-10-15 20:23:56
- * @LastEditTime: 2020-02-25 00:36:49
+ * @LastEditTime: 2020-03-24 13:45:19
  * @description: 说明
  -->
 <!DOCTYPE html>
@@ -56,10 +56,10 @@
 			<div id="skill" class="sectionContent">
 				<ul style="list-style: none">
 					<li><progress  value="70" max="100"></progress> 
-						了解Shell编程, 熟悉CentOS,Debian操作系统</li>
+						了解Shell语言, 熟悉CentOS,Debian操作系统</li>
 					<li>
 						<progress value="75" max="100"></progress>
-						熟悉Python语言, 有脚本编写经验,了解其Django框架
+						熟悉Python语言, 有脚本开发经验, 了解其Django框架
 					</li>
 					<li>
 						<progress value="70" max="100"></progress>
@@ -69,19 +69,19 @@
 						了解数据库原理, 熟悉MySQL, Redis数据库的部署,配置维护
 					</li>
 					<li><progress value="65" max="100"></progress>
-						熟悉Ceph存储的配置维护, 了解其存储原理
+						熟悉Ansible自动化运维配置管理工具
 					</li>
 					<li>
 						<progress value="60" max="100"></progress>
-						了解CI/CD流程, 熟悉Git, Jenkins等工具的使用
+						了解Ceph存储的配置维护及其存储原理
 					</li>
 					<li>
 						<progress value="55" max="100"></progress>
-						熟悉Nginx, HAproxy, KeepAlived等中间件的部署,配置
+						了解CI/CD流程及Git, Jenkins等工具的使用
 					</li>
 					<li>
-						<progress value="50" max="100"></progress>
-						熟悉Ansible自动化运维配置管理工具
+						<progress value="55" max="100"></progress>
+						了解Nginx, HAproxy, KeepAlived等中间件的部署,配置
 					</li>
 					<li>
 						<progress value="50" max="100"></progress>
