--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: Athrun.Zala
  * @Email: erythron@qq.com
  * @Date: 2019-10-15 20:23:56
- * @LastEditTime: 2020-03-24 13:45:19
+ * @LastEditTime: 2020-04-10 11:39:46
  * @description: 说明
  -->
 <!DOCTYPE html>
@@ -137,7 +137,7 @@
 					<h2>广东网优项目; 公司: 卓望数码 </h2>
 					<p>
 						该项目使用到的技术栈有: K8S, Docker, Ceph等. <br>
-						在该项目中, 我参与了K8S集群的高可用部署(使用HAproxy和KeepAlived搭建); ETCD的数据备份与恢复; 挂载Ceph为后端存储等;
+						在该项目中, 我参与了K8S集群的高可用部署; ETCD数据库的数据备份与恢复; 挂载Ceph为后端存储等;
 						项目外, 个人自行学习Docker, K8S相关原理, 了解其组件构成与运行. <br>
 						Docker方面: 学习相关命令的使用, 了解镜像的构成原理, Dockerfile文件的编写等; <br> 
 						K8S方面:了解其组件构成以及使用,如Pod, 控制器的部署; 服务发现; 持久卷的配置与使用; 
