--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: Athrun.Zala
  * @Email: erythron@qq.com
  * @Date: 2019-10-15 20:23:56
- * @LastEditTime: 2020-04-10 11:39:46
+ * @LastEditTime: 2020-04-10 12:46:17
  * @description: 说明
  -->
 <!DOCTYPE html>
@@ -160,8 +160,8 @@
 				<article>
 					<h2> </h2>
 					<p>
-						有一定的学习钻研心, 遇到新问题能通过google或官方文档去学习, 解决; 接受新事物的速度快, 目前在不断提高技术与工作能力; <br>
-						工作认真负责, 服从上级安排, 与同事相处愉快.<br>
+						有一定的学习钻研心, 接受新技术, 遇到问题能通过google或官方文档去学习, 解决; 目前在不断提高技术与工作能力; <br>
+						<br>
 					</p>
 					<h2>如需<a href="https://gitee.com/erythron/pdf_resume/raw/master/resume.pdf"">PDF版</a>麻烦点击; 感谢您的浏览. </h2>
 				</article>
