--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: Athrun.Zala
  * @Email: erythron@qq.com
  * @Date: 2019-10-15 20:23:56
- * @LastEditTime: 2020-04-10 12:46:17
+ * @LastEditTime: 2020-04-16 17:39:29
  * @description: 说明
  -->
 <!DOCTYPE html>
@@ -37,7 +37,7 @@
 		<div id="contactDetails" class="quickFade delayFour">
 			<ul>
 				<li>学校: 广州大学华软软件学院</li>
-				<li>学历: 本科 (2015-2019)</li>
+				<li>学历: 统招本科(2015-2019)</li>
 				<li>专业: 网络技术系</li>
 				<li>邮箱: erythron@qq.com</li>
 				<li>手机: 13124960367</li>
