--- a/index.html
+++ b/index.html
@@ -2,175 +2,189 @@
  * @Author: Athrun.Zala
  * @Email: erythron@qq.com
  * @Date: 2019-10-15 20:23:56
- * @LastEditTime: 2020-04-20 15:06:01
+ * @LastEditTime: 2021-01-03 17:32:32
  * @description: 说明
  -->
 <!DOCTYPE html>
 <html>
+
 <head>
-<title>郑卓文 - 简历</title>
+    <title>郑卓文 - 简历</title>
 
-<meta name="viewport" content="width=device-width"/>
-<meta name="description" content="The Curriculum Vitae of Joe Bloggs."/>
-<meta charset="UTF-8"> 
+    <meta name="viewport" content="width=device-width" />
+    <meta name="description" content="The Curriculum Vitae of Joe Bloggs." />
+    <meta charset="UTF-8">
 
-<link type="text/css" rel="stylesheet" href="style.css">
-<!-- <link href='http://fonts.googleapis.com/css?family=Rokkitt:400,700|Lato:400,300' rel='stylesheet' type='text/css'> -->
-<link type="text/css" rel="stylesheet" href="font.css:400,700|Lato:400,300">
+    <link type="text/css" rel="stylesheet" href="style.css">
+    <!-- <link href='http://fonts.googleapis.com/css?family=Rokkitt:400,700|Lato:400,300' rel='stylesheet' type='text/css'> -->
+    <link type="text/css" rel="stylesheet" href="font.css:400,700|Lato:400,300">
 
 </head>
-<body id="top">
-<div id="cv" class="instaFade">
-	<div class="mainDetails">
-		<div id="headshot" class="quickFade">
-			<img src="info.jpg" alt="Alan Smith" />
-			<p class="subDetails">↑ 网页版地址 ↑</p>
-		</div>
-		
-		<div id="name">
-			<h1 class="quickFade delayTwo">郑卓文</h1>
-			<h4 class="quickFade delayThree">求职意向:容器, 系统运维</h2>
-			<h4 class="quickFade delayThree">状态: 在职</h2>
-			<h4 class="quickFade delayThree">工作经验: 一年</h2>
-		</div>
-		
-		<div id="contactDetails" class="quickFade delayFour">
-			<ul>
-				<li>学校: 广州大学华软软件学院</li>
-				<li>学历: 统招本科(2019)</li>
-				<li>专业: 网络技术系</li>
-				<li>邮箱: erythron@qq.com</li>
-				<li>手机: 13124960367</li>
-			</ul>
-		</div>
-		<div class="clear"></div>
-	</div>
-	
-	<div id="mainArea" class="quickFade delayFive">		
-		<section>
-			<div class="sectionTitle">
-				<h1>技能</h1>
-				<h1>掌握</h1>
-			</div>
-			
-			<div id="skill" class="sectionContent">
-				<ul style="list-style: none">
-					<li><progress  value="70" max="100"></progress> 
-						了解Shell语言, 熟悉CentOS,Debian操作系统</li>
-					<li>
-						<progress value="75" max="100"></progress>
-						熟悉Python语言, 有脚本开发经验, 了解其Django框架
-					</li>
-					<li>
-						<progress value="70" max="100"></progress>
-						熟悉Docker容器, Kubernetes容器编排技术
-					</li>
-					<li><progress value="65" max="100"></progress>
-						熟悉Ansible自动化运维配置管理工具
-						
-					</li>
-					<li><progress value="65" max="100"></progress>
-						了解分布式存储Ceph的原理及其配置维护
-					</li>
-					<li>
-						<progress value="60" max="100"></progress>
-						了解数据库原理, 熟悉MySQL, Redis数据库的部署,配置维护
-					</li>
-					<li>
-						<progress value="55" max="100"></progress>
-						了解CI/CD流程及Git, Jenkins等工具的使用
-					</li>
-					<li>
-						<progress value="55" max="100"></progress>
-						了解Nginx, HAproxy, KeepAlived等中间件的部署,配置
-					</li>
-					<!-- <li>
-						<progress value="50" max="100"></progress>
-						有公有云使用经验, 阿里云, 腾讯云, BWH等
-					</li> -->
-					<li>&nbsp;</li>
-				</ul>
-			</div>
-			<div class="clear"></div>
-		</section>
-		<section>
-			<div class="sectionTitle">
-				<h1>经历</h1>
-			</div>
-			
-			<div class="sectionContent">
-				<article>
-					<h2>卓望数码(移动子公司);  系统运维工程师; 2018.12 - 今</h2>
-					<!-- <p class="subDetails">2018.12 - ? </p> -->
-					<p>负责广东移动融合云资源分配管理以及服务设施的日常维护</p>
-				</article>
-				
-				<article>
-					<h2>广州银行信用卡中心; 信息安全实习生; 2018.09 - 2018.12</h2>
-					<!-- <p class="subDetails">2018.09 - 2018.12</p> -->
-					<p>
-						协助信息安全专员对内部web系统进行渗透测试,对系统的上线,迭代进行审核;
-						使用各信息安全工具,分析监控日志,进行日常维护.
-					</p>
-				</article>
-			</div>
-			<div class="clear"></div>
-		</section>
-		<section>
-			<div class="sectionTitle">
-				<h1>项目</h1>
-				<h1>内容</h1>
-			</div>
-		
-			<div class="sectionContent">		
-				<article>
-					<h2>移动融合云项目; 公司: 卓望数码 </h2>
-					<p>
-						移动融合云由移动各机房ESXI物理服务器接入到VSphere虚拟化平台构成集群后管理使用,
-						所使用到的技术栈有: VSphere, VRops, PowerShell, Python, Zabbix, Linux, Win; 工作内容如下: <br>
-						1. 负责1k+物理服务器的稳定运作, 日常维护, 进行基线检查等安全防护操作.<br>
-						2. 保障VSphere平台的稳定使用, 及时响应客户报障, 保证VPS的可用性.<br>
-						3. 根据需求编写PowerShell或Python脚本, 对工作内容优化, 提升工作效率.<br>
-						4. 依靠Zabbix监控平台, 过滤无效告警, 在发现硬件及系统异常后及时修复.
-					</p>
-				</article>
-				<article>
-					<h2>广东网优项目; 公司: 卓望数码 </h2>
-					<p>
-						该项目使用到的技术栈有: K8S, Docker, Ceph等. <br>
-						在该项目中, 我参与了K8S集群的高可用部署; ETCD数据库的数据备份与恢复; 挂载Ceph为后端存储等;
-						项目外, 个人自行学习Docker, K8S相关原理, 了解其组件构成与运行. <br>
-						Docker方面: 学习相关命令的使用, 了解镜像的构成原理, Dockerfile文件的编写等; <br> 
-						K8S方面:了解其组件构成以及使用,如Pod, 控制器的部署; 服务发现; 持久卷的配置与使用; 
-						角色的权限控制; Helm, Ingress的部署与使用等 <br> 
-					</p>
-				</article>
-			</div>
-			<div class="clear"></div>
-		</section>
-		
-		
-		
-		<section>
-			<div class="sectionTitle">
-				<h1>自我</h1>
-				<h1>评价</h1>
-			</div>
-			
-			<div class="sectionContent">
-				<article>
-					<h2> </h2>
-					<p>
-						有一定的学习钻研心, 接受新技术, 遇到问题能通过google或官方文档去学习, 解决; 目前在不断提高技术与工作能力; <br>
-						<br>
-					</p>
-					<h2>如需<a href="https://gitee.com/erythron/pdf_resume/raw/master/resume.pdf"">PDF版</a>麻烦点击; 感谢您的浏览. </h2>
-				</article>
-			</div>
-			<div class="clear"></div>
-		</section>
 
-		<!-- <section>
+<body id="top">
+    <div id="cv" class="instaFade">
+        <div class="mainDetails">
+            <div id="headshot" class="quickFade">
+                <img src="info.jpg" alt="Alan Smith" />
+                <p class="subDetails">↑ 网页版地址 ↑</p>
+            </div>
+
+            <div id="name">
+                <h1 class="quickFade delayTwo">郑卓文</h1>
+                <h4 class="quickFade delayThree">求职意向:容器, 系统运维</h2>
+                    <h4 class="quickFade delayThree">状态: 在职</h2>
+                        <h4 class="quickFade delayThree">工作经验: 一年</h2>
+            </div>
+
+            <div id="contactDetails" class="quickFade delayFour">
+                <ul>
+                    <li>学校: 广州大学华软软件学院</li>
+                    <li>学历: 统招本科(2019届)</li>
+                    <li>专业: 网络技术系</li>
+                    <li>邮箱: erythron@qq.com</li>
+                    <li>手机: 13124960367</li>
+                </ul>
+            </div>
+            <div class="clear"></div>
+        </div>
+
+        <div id="mainArea" class="quickFade delayFive">
+            <section>
+                <div class="sectionTitle">
+                    <h1>技能</h1>
+                    <h1>掌握</h1>
+                </div>
+
+                <div id="skill" class="sectionContent">
+                    <ul style="list-style: none">
+                        <li><progress value="70" max="100"></progress>
+                            了解Shell语言, 熟悉CentOS,Debian等Linux操作系统</li>
+                        <li>
+                            <progress value="75" max="100"></progress>
+                            熟悉Python语言, 有一定的脚本开发经验
+                        </li>
+                        <li>
+                            <progress value="70" max="100"></progress>
+                            熟悉Docker容器, Kubernetes容器编排技术
+                        </li>
+                        <!-- <li><progress value="65" max="100"></progress>
+                            熟悉Ansible自动化运维配置管理工具
+                        </li> -->
+                        <!-- <li><progress value="65" max="100"></progress>
+						了解分布式存储Ceph的原理及其配置维护
+					</li> -->
+                        <li>
+                            <progress value="60" max="100"></progress>
+                            了解数据库原理, 了解MySQL的基本配置与维护
+                        </li>
+                        <li>
+                            <progress value="55" max="100"></progress>
+                            了解Ansible, Git, Jenkins等自动化工具的使用
+                        </li>
+                        <li>
+                            <progress value="55" max="100"></progress>
+                            了解Nginx, HAproxy, KeepAlived等中间件的部署,配置
+                        </li>
+                        <li>
+                            <progress value="50" max="100"></progress>
+                            有公有云使用经验, 如阿里, 腾讯云等
+                        </li>
+                        <li>&nbsp;</li>
+                    </ul>
+                </div>
+                <div class="clear"></div>
+            </section>
+            <section>
+                <div class="sectionTitle">
+                    <h1>经历</h1>
+                </div>
+
+                <div class="sectionContent">
+                    <article>
+                        <h2>卓望数码(移动子公司); 运维工程师; 2018.12 - ?</h2>
+                        <!-- <p class="subDetails">2018.12 - ? </p> -->
+                        <p>参与了广东移动-融合云, 中移-权益平台等几个项目的维护</p>
+                    </article>
+
+                    <!-- <article>
+                        <h2>广州银行信用卡中心; 信息安全实习生; 2018.09 - 2018.12</h2>
+                        <p>
+                            协助信息安全专员对内部web系统进行渗透测试,对系统的上线,迭代进行审核;
+                            使用各信息安全工具,分析监控日志,进行日常维护.
+                        </p>
+                    </article> -->
+                </div>
+                <div class="clear"></div>
+            </section>
+            <section>
+                <div class="sectionTitle">
+                    <h1>项目</h1>
+                    <h1>内容</h1>
+                </div>
+
+                <div class="sectionContent">
+                    <article>
+                        <h2>
+                            <a href="https://dev.coc.10086.cn/coc3/market-web/coc3-market-web/#/home" target='_BLANK'>
+                                权益超市</a>(卓望); 时间: 2019.12 - ?
+                        </h2>
+                        <p>
+                            权益超市为移动的话费消费商城, 投放在移动手机营业厅, 微信公众号等; 主要技术栈: Java, Docker, MySQL, Grafana等.个人工作内容如下:<br>
+                            1. 维护平台操作系统, 保证应用的稳定运行.<br>
+                            2. 参与平台的版本发布部署. <br>
+                            3. 独立完成自动化监控输出: 通过selenium对Grafana抓取页面数据, 按需定时邮件输出监控内容, 无需人工介入. <br>
+                            4. 其它工作: 编写, 维护系统脚本; 配合开发核查日志解决异常业务订单; 系统或业务告警处理等.
+                        </p>
+                    </article>
+                    <article>
+                        <h2>广东网优项目(卓望); 时间: 2019.11, 已停止</h2>
+                        <p>
+                            该项目使用到的技术栈有: K8S, Docker, Ceph等. <br>
+                            在该项目中, 我参与了K8S集群的高可用部署; ETCD数据库的数据备份与恢复; 挂载Ceph为后端存储等;
+                            项目外, 个人自行学习Docker, K8S相关原理, 了解其组件构成与运行. <br>
+                            Docker方面: 学习相关命令的使用, 了解镜像的构成原理, Dockerfile文件的编写等; <br>
+                            K8S方面: 了解其组件构成以及使用,如Pod, 控制器的部署; 服务发现; 持久卷的配置与使用;
+                            角色的权限控制; Helm, Ingress的部署与使用等 <br>
+                        </p>
+                    </article>
+                    <article>
+                        <h2>移动融合云项目(卓望) 时间:2018.12 - 2019.10</h2>
+                        <p>
+                            移动融合云由移动各机房ESXI物理服务器接入到VSphere虚拟化平台构成集群后管理使用,
+                            所使用到的技术栈有: VSphere, VRops等; 工作内容如下: <br>
+                            1. 负责1k+物理服务器的稳定运作, 日常维护, 进行基线检查等安全防护操作.<br>
+                            2. 保障VSphere平台的稳定使用, 及时响应客户报障, 保证VPS的可用性.<br>
+                            3. 根据需求编写PowerShell或Python脚本, 对工作内容优化.<br>
+                        </p>
+                    </article>
+                </div>
+                <div class="clear"></div>
+            </section>
+
+
+
+            <section>
+                <div class="sectionTitle">
+                    <h1>自我</h1>
+                    <h1>评价</h1>
+                </div>
+
+                <div class="sectionContent">
+                    <article>
+                        <h2> </h2>
+                        <p>
+                            有一定的学习钻研心, 接受新技术, 遇到问题能通过google或官方文档去学习, 解决; <br>
+                            目前在不断提高自己的技术与工作能力; <br>
+                            <br>
+                        </p>
+                        <h2>如需<a href="https://gitee.com/erythron/pdf_resume/raw/master/resume.pdf"">PDF版</a>麻烦点击下载另存; 感谢您的浏览. </h2>
+				</article>
+			</div>
+			<div class=" clear">
+                </div>
+            </section>
+
+            <!-- <section>
 			<div class="sectionTitle">
 				<h1></h1>
 			</div>
@@ -186,8 +200,9 @@
 			</div>
 			<div class="clear"></div>
 		</section> -->
-		<!--注释使用  -->
-	</div>
-</div>
+            <!--注释使用  -->
+        </div>
+    </div>
 </body>
+
 </html>
