--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: Athrun.Zala
  * @Email: erythron@qq.com
  * @Date: 2019-10-15 20:23:56
- * @LastEditTime: 2021-01-03 17:32:32
+ * @LastEditTime: 2021-01-05 21:29:05
  * @description: 说明
  -->
 <!DOCTYPE html>
@@ -33,7 +33,7 @@
                 <h1 class="quickFade delayTwo">郑卓文</h1>
                 <h4 class="quickFade delayThree">求职意向:容器, 系统运维</h2>
                     <h4 class="quickFade delayThree">状态: 在职</h2>
-                        <h4 class="quickFade delayThree">工作经验: 一年</h2>
+                        <h4 class="quickFade delayThree">工作经验: 2年</h2>
             </div>
 
             <div id="contactDetails" class="quickFade delayFour">
@@ -61,11 +61,11 @@
                             了解Shell语言, 熟悉CentOS,Debian等Linux操作系统</li>
                         <li>
                             <progress value="75" max="100"></progress>
-                            熟悉Python语言, 有一定的脚本开发经验
+                            熟悉Python语言, 有一定的开发经验.
                         </li>
                         <li>
                             <progress value="70" max="100"></progress>
-                            熟悉Docker容器, Kubernetes容器编排技术
+                            熟悉Docker容器, Kubernetes容器编排技术.
                         </li>
                         <!-- <li><progress value="65" max="100"></progress>
                             熟悉Ansible自动化运维配置管理工具
@@ -75,18 +75,18 @@
 					</li> -->
                         <li>
                             <progress value="60" max="100"></progress>
-                            了解数据库原理, 了解MySQL的基本配置与维护
+                            了解数据库原理, 具备对MySQL, Redis基本配置与维护能力.
                         </li>
                         <li>
                             <progress value="55" max="100"></progress>
-                            了解Ansible, Git, Jenkins等自动化工具的使用
+                            了解Ansible, Git, Jenkins等自动化工具的使用.
                         </li>
                         <li>
                             <progress value="55" max="100"></progress>
-                            了解Nginx, HAproxy, KeepAlived等中间件的部署,配置
+                            了解Nginx, HAproxy, KeepAlived等中间件的部署, 配置.
                         </li>
                         <li>
-                            <progress value="50" max="100"></progress>
+                            <progress value="60" max="100"></progress>
                             有公有云使用经验, 如阿里, 腾讯云等
                         </li>
                         <li>&nbsp;</li>
@@ -133,7 +133,7 @@
                             1. 维护平台操作系统, 保证应用的稳定运行.<br>
                             2. 参与平台的版本发布部署. <br>
                             3. 独立完成自动化监控输出: 通过selenium对Grafana抓取页面数据, 按需定时邮件输出监控内容, 无需人工介入. <br>
-                            4. 其它工作: 编写, 维护系统脚本; 配合开发核查日志解决异常业务订单; 系统或业务告警处理等.
+                            4. 其它工作: 编写, 维护系统脚本; 配合开发核查日志解决异常业务订单; 系统监控或业务告警处理等.
                         </p>
                     </article>
                     <article>
@@ -152,7 +152,7 @@
                         <p>
                             移动融合云由移动各机房ESXI物理服务器接入到VSphere虚拟化平台构成集群后管理使用,
                             所使用到的技术栈有: VSphere, VRops等; 工作内容如下: <br>
-                            1. 负责1k+物理服务器的稳定运作, 日常维护, 进行基线检查等安全防护操作.<br>
+                            1. 参与数量1千以上的物理服务器集群的日常维护, 保障服务器集群的稳定运作.<br>
                             2. 保障VSphere平台的稳定使用, 及时响应客户报障, 保证VPS的可用性.<br>
                             3. 根据需求编写PowerShell或Python脚本, 对工作内容优化.<br>
                         </p>
