--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: Athrun.Zala
  * @Email: erythron@qq.com
  * @Date: 2019-10-15 20:23:56
- * @LastEditTime: 2021-01-05 21:29:05
+ * @LastEditTime: 2021-01-05 21:48:01
  * @description: 说明
  -->
 <!DOCTYPE html>
@@ -133,7 +133,8 @@
                             1. 维护平台操作系统, 保证应用的稳定运行.<br>
                             2. 参与平台的版本发布部署. <br>
                             3. 独立完成自动化监控输出: 通过selenium对Grafana抓取页面数据, 按需定时邮件输出监控内容, 无需人工介入. <br>
-                            4. 其它工作: 编写, 维护系统脚本; 配合开发核查日志解决异常业务订单; 系统监控或业务告警处理等.
+                            4. 负责数据库的基本维护以及SQL语句执行等.
+                            5. 其它工作: 编写, 维护系统脚本; 配合开发核查日志解决异常业务订单; 系统监控或业务告警处理等.
                         </p>
                     </article>
                     <article>
