--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: Athrun.Zala
  * @Email: erythron@qq.com
  * @Date: 2019-10-15 20:23:56
- * @LastEditTime: 2021-01-05 21:52:53
+ * @LastEditTime: 2021-01-05 22:13:04
  * @description: 说明
  -->
 <!DOCTYPE html>
@@ -126,7 +126,7 @@
                     <article>
                         <h2>
                             <a href="https://dev.coc.10086.cn/coc3/market-web/coc3-market-web/#/home" target='_BLANK'>
-                                权益超市</a>(卓望); 时间: 2019.12 - ?
+                                权益超市</a>, 时间: 2019.12 - ?
                         </h2>
                         <p>
                             权益超市为移动的话费消费商城, 投放在移动手机营业厅, 微信公众号等; 主要技术栈: Java, Docker, MySQL, Grafana等.个人工作内容如下:<br>
@@ -138,7 +138,7 @@
                         </p>
                     </article>
                     <article>
-                        <h2>广东网优项目(卓望); 时间: 2019.11, 已停止</h2>
+                        <h2>广东网优项目, 时间: 2019.11, 已停止</h2>
                         <p>
                             该项目使用到的技术栈有: K8S, Docker, Ceph等. <br>
                             在该项目中, 我参与了K8S集群的高可用部署; ETCD数据库的数据备份与恢复; 挂载Ceph为后端存储等;
@@ -149,7 +149,7 @@
                         </p>
                     </article>
                     <article>
-                        <h2>移动融合云项目(卓望) 时间:2018.12 - 2019.10</h2>
+                        <h2>移动融合云项目, 时间:2018.12 - 2019.10</h2>
                         <p>
                             移动融合云由移动各机房ESXI物理服务器接入到VSphere虚拟化平台构成集群后管理使用,
                             所使用到的技术栈有: VSphere, VRops等; 工作内容如下: <br>
