--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: Athrun.Zala
  * @Email: erythron@qq.com
  * @Date: 2019-10-15 20:23:56
- * @LastEditTime: 2021-01-05 22:13:04
+ * @LastEditTime: 2021-01-06 10:12:40
  * @description: 说明
  -->
 <!DOCTYPE html>
@@ -131,7 +131,7 @@
                         <p>
                             权益超市为移动的话费消费商城, 投放在移动手机营业厅, 微信公众号等; 主要技术栈: Java, Docker, MySQL, Grafana等.个人工作内容如下:<br>
                             1. 维护平台操作系统, 保证应用的稳定运行.<br>
-                            2. 参与平台的版本发布部署. <br>
+                            2. 参与CI/CD流程, 负责部分Dockerfile的模板编写以及权益超市的版本发布. <br>
                             3. 独立完成自动化监控输出: 通过selenium对Grafana抓取页面数据, 按需定时邮件输出监控内容, 无需人工介入. <br>
                             4. 负责数据库的基本维护以及SQL语句执行等. <br>
                             5. 其它工作: 编写, 维护系统脚本; 配合开发核查日志解决异常业务订单; 系统监控或业务告警处理等.
