--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: Athrun.Zala
  * @Email: erythron@qq.com
  * @Date: 2019-10-15 20:23:56
- * @LastEditTime: 2021-01-05 22:13:04
+ * @LastEditTime: 2021-01-07 19:11:14
  * @description: 说明
  -->
 <!DOCTYPE html>
@@ -101,9 +101,9 @@
 
                 <div class="sectionContent">
                     <article>
-                        <h2>卓望数码(移动子公司); 运维工程师; 2018.12 - ?</h2>
+                        <h2>卓望数码; 运维工程师(校招); 2018.12 - ?</h2>
                         <!-- <p class="subDetails">2018.12 - ? </p> -->
-                        <p>参与了广东移动-融合云, 中移-权益平台等几个项目的维护</p>
+                        <p>参与了广东移动-融合云, 集运-权益平台等几个项目的维护</p>
                     </article>
 
                     <!-- <article>
@@ -126,15 +126,16 @@
                     <article>
                         <h2>
                             <a href="https://dev.coc.10086.cn/coc3/market-web/coc3-market-web/#/home" target='_BLANK'>
-                                权益超市</a>, 时间: 2019.12 - ?
+                                权益平台&权益超市</a>, 时间: 2019.12 - ?
                         </h2>
                         <p>
-                            权益超市为移动的话费消费商城, 投放在移动手机营业厅, 微信公众号等; 主要技术栈: Java, Docker, MySQL, Grafana等.个人工作内容如下:<br>
-                            1. 维护平台操作系统, 保证应用的稳定运行.<br>
-                            2. 参与平台的版本发布部署. <br>
+                            权益平台&权益超市为移动的权益投放平台和消费商城, 投放在移动手机营业厅, 微信公众号等, 两者已拆分;<br>
+                            主要技术栈: Java, Docker, K8S, MySQL, Grafana等. 个人工作内容如下:<br>
+                            1. 维护权益平台生产环境操作系统, 保证容器应用的稳定运行.<br>
+                            2. 参与已拆分迁移K8S平台的权益超市版本部署. <br>
                             3. 独立完成自动化监控输出: 通过selenium对Grafana抓取页面数据, 按需定时邮件输出监控内容, 无需人工介入. <br>
-                            4. 负责数据库的基本维护以及SQL语句执行等. <br>
-                            5. 其它工作: 编写, 维护系统脚本; 配合开发核查日志解决异常业务订单; 系统监控或业务告警处理等.
+                            4. 负责数据库的基本维护以及SQL语句审批执行等. <br>
+                            5. 其它工作: 编写, 维护系统脚本; 配合开发核查日志解决异常业务订单; 系统监控容器告警以及业务告警处理等.
                         </p>
                     </article>
                     <article>
