--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: Athrun.Zala
  * @Email: erythron@qq.com
  * @Date: 2019-10-15 20:23:56
- * @LastEditTime: 2021-01-07 20:11:57
+ * @LastEditTime: 2021-01-07 20:15:03
  * @description: 说明
  -->
 <!DOCTYPE html>
@@ -25,7 +25,7 @@
     <div id="cv" class="instaFade">
         <div class="mainDetails">
             <div id="headshot" class="quickFade">
-                <img src="info.jpg" alt="Alan Smith" />
+                <img src="info.jpg" alt="erythron" />
                 <p class="subDetails">↑ 网页版地址 ↑</p>
             </div>
 
