--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: Athrun.Zala
  * @Email: erythron@qq.com
  * @Date: 2019-10-15 20:23:56
- * @LastEditTime: 2021-01-07 20:15:03
+ * @LastEditTime: 2021-01-10 17:08:47
  * @description: 说明
  -->
 <!DOCTYPE html>
@@ -74,15 +74,19 @@
 						了解分布式存储Ceph的原理及其配置维护
 					</li> -->
                         <li>
-                            <progress value="60" max="100"></progress>
+                            <progress value="65" max="100"></progress>
                             了解数据库原理, 具备对MySQL, Redis基本配置与维护能力.
                         </li>
                         <li>
-                            <progress value="55" max="100"></progress>
+                            <progress value="65" max="100"></progress>
                             了解Ansible, Git, Jenkins等自动化工具的使用.
                         </li>
                         <li>
-                            <progress value="55" max="100"></progress>
+                            <progress value="65" max="100"></progress>
+                            了解Prometheus, Grafana监控可示化工具的配置以及使用.
+                        </li>
+                        <li>
+                            <progress value="60" max="100"></progress>
                             了解Nginx, HAproxy, KeepAlived等中间件的部署, 配置.
                         </li>
                         <li>
