--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: Athrun.Zala
  * @Email: erythron@qq.com
  * @Date: 2019-10-15 20:23:56
- * @LastEditTime: 2021-01-10 17:08:47
+ * @LastEditTime: 2021-01-10 17:21:19
  * @description: 说明
  -->
 <!DOCTYPE html>
@@ -181,14 +181,16 @@
                     <article>
                         <h2> </h2>
                         <p>
-                            有一定的学习钻研心, 接受新技术, 遇到问题能通过google或官方文档去学习, 解决; <br>
-                            目前在不断提高自己的技术与工作能力; <br>
+                            缺点: 工作履历不长, 目前实践还不够丰富;<br>
+                            优点: 有一定的学习钻研心, 接受新技术, 遇到问题能通过google或官方文档去学习, 解决; <br>
+                            目前也在不断提高自己的技术与工作能力. <br>
                             <br>
                         </p>
-                        <h2>如需<a href="https://gitee.com/erythron/pdf_resume/raw/master/resume.pdf"">PDF版</a>麻烦点击下载另存; 感谢您的浏览. </h2>
-				</article>
-			</div>
-			<div class=" clear">
+                        <!-- <h2>如需<a href="https://gitee.com/erythron/pdf_resume/raw/master/resume.pdf"">PDF版</a>麻烦点击下载另存; 感谢您的浏览. </h2> -->
+                        <p>END, 感谢您的查看. </p>
+                    </article>
+                </div>
+                <div class=" clear">
                 </div>
             </section>
 
