--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: Athrun.Zala
  * @Email: erythron@qq.com
  * @Date: 2019-10-15 20:23:56
- * @LastEditTime: 2021-01-10 17:21:19
+ * @LastEditTime: 2021-01-10 17:25:57
  * @description: 说明
  -->
 <!DOCTYPE html>
@@ -139,7 +139,8 @@
                             1. 负责CI/CD流程, Dockerfile的模板编写, 以及权益平台的版本部署. <br>
                             2. 负责部分已拆分迁移K8S平台的权益超市版本部署. <br>
                             3. 维护平台操作系统, 保证容器应用的稳定运行 <br>
-                            4. 独立完成自动化监控输出: 通过selenium抓取Grafana页面数据, 按需定时邮件输出监控内容, 无需人工介入. <br>
+                            4. 独立完成自动化监控输出: 编写Python代码, 通过selenium操作Chrome获取JS渲染后的Grafana页面数据, 按需定时邮件输出监控内容, 无需人工介入.
+                            <br>
                             5. 负责数据库的基本维护以及SQL语句审批执行等. <br>
                             6. 其它工作: 编写, 维护系统脚本; 配合开发核查日志解决异常业务订单; 系统,容器告警以及业务告警处理等.
                         </p>
